# mch2022-sponsors-slideshow

./: .gitmodules  README.md  build.sh  export.sh  import_pngs.sh
.github/workflows/: codeql.yml
app/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
app/main/: CMakeLists.txt  main.c
app/main/include/: main.h
