idf_component_register(
    SRCS
        "main.c"
    INCLUDE_DIRS
        "." "include"
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/1_logo_adyen.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/1_logo_computest.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/1_logo_deloitte.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/2_logo_mullvad_vpn.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/2_logo_secura.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/3_logo_stegen.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/3_logo_access42.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/3_logo_at_computing.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/3_logo_zerocopter.png
)