idf_component_register(
    SRCS
        "main.c"
    INCLUDE_DIRS
        "." "include"
    # Badger animation.
    EMBED_FILES ${project_dir}/animation/animation_frame_1.png
    EMBED_FILES ${project_dir}/animation/animation_frame_2.png
    EMBED_FILES ${project_dir}/animation/animation_frame_3.png
    EMBED_FILES ${project_dir}/animation/animation_frame_4.png
    EMBED_FILES ${project_dir}/animation/animation_frame_5.png
    EMBED_FILES ${project_dir}/animation/animation_frame_6.png
    EMBED_FILES ${project_dir}/animation/animation_frame_7.png
    EMBED_FILES ${project_dir}/animation/animation_frame_8.png
    EMBED_FILES ${project_dir}/animation/animation_frame_9.png
    EMBED_FILES ${project_dir}/animation/animation_frame_10.png
    EMBED_FILES ${project_dir}/animation/animation_frame_11.png
    EMBED_FILES ${project_dir}/animation/animation_frame_12.png
    EMBED_FILES ${project_dir}/animation/animation_frame_13.png
    EMBED_FILES ${project_dir}/animation/animation_frame_14.png
    EMBED_FILES ${project_dir}/animation/animation_frame_15.png
    EMBED_FILES ${project_dir}/animation/animation_frame_16.png
    EMBED_FILES ${project_dir}/animation/animation_frame_17.png
    EMBED_FILES ${project_dir}/animation/animation_frame_18.png
    EMBED_FILES ${project_dir}/animation/animation_frame_19.png
    EMBED_FILES ${project_dir}/animation/animation_frame_20.png
    EMBED_FILES ${project_dir}/animation/animation_frame_21.png
    EMBED_FILES ${project_dir}/animation/animation_frame_22.png
    EMBED_FILES ${project_dir}/animation/animation_frame_23.png
    EMBED_FILES ${project_dir}/animation/animation_frame_24.png
    EMBED_FILES ${project_dir}/animation/animation_frame_25.png
    EMBED_FILES ${project_dir}/animation/animation_frame_26.png
    EMBED_FILES ${project_dir}/animation/animation_frame_27.png
    EMBED_FILES ${project_dir}/animation/animation_frame_28.png
    # Event sponsors.
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/1_logo_adyen.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/1_logo_computest.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/1_logo_deloitte.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/2_logo_db.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/2_logo_mullvad_vpn.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/2_logo_secura.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/2_logo_schubergphilis.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/2_logo_true.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/3_logo_a2b_kuc.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/3_logo_access42.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/3_logo_at_computing.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/3_logo_protagio.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/3_logo_s_rm.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/3_logo_s-unit.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/3_logo_stegen.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/3_logo_transip.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/3_logo_zerocopter.png
    # Hardware sponsors.
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/m_logo_allnet.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/m_logo_bosch.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/m_logo_espressif.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/m_logo_lattice.png
    EMBED_FILES ${project_dir}/mch2022-sponsors/logos/m_logo_rpi.png
)
